--- a/src/EasyLog/EasyLogService/_Imports.razor
+++ b/src/EasyLog/EasyLogService/_Imports.razor
@@ -6,4 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using EasyLogService
+@using EasyLogService.Controllers
 @using EasyLogService.Shared
+@using MediatR
+
+
