--- a/src/EasyLog/EasyLogService/Components/List.razor
+++ b/src/EasyLog/EasyLogService/Components/List.razor
@@ -12,11 +12,20 @@
     private int _count = 10;
     public List<ListElement> _list = new List<ListElement>(100);
 
-    public void Add(string elementContent)
+    public void Set(List<ListElement> newList, Refresh refresh)
+    {
+        _list = newList;
+        if (refresh == Refresh.ImmediatelyRefresh)
+            base.InvokeAsync(StateHasChanged);
+    }
+
+
+    public void Add(string elementContent, Refresh refresh)
     {
 
         _list.Add(new ListElement(elementContent));
+        if (refresh == Refresh.ImmediatelyRefresh)
+            base.InvokeAsync(StateHasChanged);
 
-        base.InvokeAsync(StateHasChanged);
     }
 }
