--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -46,7 +46,9 @@
         foreach (var queryResult in logEntries)
         {
             var e = new EasyLogService.Components.ListElement();
-            e.Content = queryResult.log;
+            e.ContentLogOutput = queryResult.log;
+            e.ContentDateTime = queryResult.time;
+            e.ContentLogType = queryResult.stream;
             list.Add(e);
         }
         _mainList.Set(list, Refresh.ImmediatelyRefresh);
