Refactored code - CentralLogService separated into multiple files

--- a/src/EasyLog/EasyLogService/Components/ListElement.razor
+++ b/src/EasyLog/EasyLogService/Components/ListElement.razor
@@ -20,4 +20,11 @@
     {
     }
 
+    public void Set(DateTimeOffset time, string output, string logtype)
+    {
+        ContentDateTime = time;
+        ContentLogOutput = output;
+        ContentLogType = logtype;
+    }
+
 }
