--- a/src/EasyLog/EasyLogService/Components/ListElement.razor
+++ b/src/EasyLog/EasyLogService/Components/ListElement.razor
@@ -1,7 +1,7 @@
-﻿<div style="width: 100%; overflow: hidden;padding: 0.05rem 0.5rem 0.05rem 0.5rem">
-    <div class="listelement" style="width: 15%; display: table-cell; float: left;">@ContentDateTime</div>
-    <div class="listelement" style="width: 75%; display: table-cell; float: left;">@ContentLogOutput</div>
-    <div class="listelement" style="width: 10%; display: table-cell; float: left;">@ContentLogType</div>
+﻿<div class="defpadding" style="width: 100%; overflow: hidden">
+    <div class="listelement defpadding" style="width: 15%; display: table-cell; float: left;">@ContentDateTime</div>
+    <div class="listelement defpadding" style="width: 75%; display: table-cell; float: left;">@ContentLogOutput</div>
+    <div class="listelement defpadding" style="width: 10%; display: table-cell; float: left;">@ContentLogType</div>
 </div>
 
 @code {
