--- a/src/EasyLog/EasyLogService/Pages/Main.cshtml
+++ b/src/EasyLog/EasyLogService/Pages/Main.cshtml
@@ -18,7 +18,7 @@
     <link href="css/site.css" rel="stylesheet" />
 
 </head>
-<body>
+<body style="height: 100%; overflow: hidden">
     <app>
         <component type="typeof(App)" render-mode="ServerPrerendered" />
     </app>
