--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -2,17 +2,17 @@
 @inherits LayoutComponentBase
 
 
-<div class="main">
-    <div>
-        <EasyLogService.Components.SearchField @ref="SearchField" />
+<div class="main" >
+    <div class="mt-3 ml-3 mr-3 mb-4 border rounded shadow bg-primary position-static" name="mainHeader" style=""><h1 style="text-align: center">Easy Log</h1></div>
+    <div class="" style="">
+        <div class="m-3" style="height:30px">
+            <EasyLogService.Components.SearchField @ref="SearchField" />
+        </div>
+        <div class="m-3 defpadding  ">Entries: @numEntries</div>
+        <div class="m-3 border bg-light" name="MainList">
+            <EasyLogService.Components.List @ref="_mainList" />
+        </div>
     </div>
-    <div>Entries: @numEntries</div>
-    <div name="MainList" style="background:yellow;height:10px">
-        <EasyLogService.Components.List @ref="_mainList" />
-    </div>
-    @*<div class="content px-4">
-            @Body
-        </div>*@
 </div>
 
 @using EasyLogService.Commands;
