--- a/src/EasyLog/EasyLogService/wwwroot/css/Site.css
+++ b/src/EasyLog/EasyLogService/wwwroot/css/Site.css
@@ -9,3 +9,13 @@
     width: 100%;
     z-index: 1000;
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
