--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -10,7 +10,7 @@
         </div>
         <div class="m-3 defpadding  ">Entries: @numEntries</div>
         
-        <div class="m-3 border bg-light" name="MainList" style="position:absolute; height:auto; top:180px; bottom:0; overflow:auto; box-sizing:border-box">
+        <div class="m-3 border bg-light" name="MainList" style="position:absolute; width:auto; height:auto; top:180px; bottom:0; overflow:auto; box-sizing:border-box">
             <EasyLogService.Components.List @ref="_mainList" />
         </div>
     </div>
