Added case insensitive search

--- a/src/EasyLog/EasyLogService/Components/ListElement.razor
+++ b/src/EasyLog/EasyLogService/Components/ListElement.razor
@@ -24,7 +24,7 @@
             {
                 case "stderr" : return "red";
                 case "EASYLOG": return "darkred";
-                default: return "red";
+                default: return "green";
             }
         }
     }
