--- a/src/EasyLog/EasyLogService/Components/ListElement.razor
+++ b/src/EasyLog/EasyLogService/Components/ListElement.razor
@@ -1,4 +1,9 @@
-﻿<div class="defpadding" style="width: auto; overflow: hidden">
+﻿
+<style>
+    .loglist:nth-of-type(odd) { background-color: rgba(221, 221, 221, 0.2); }
+</style>
+
+<div class="loglist defpadding" style="width: auto; overflow: hidden">
     <div class="listelement ml-2 defpadding" style="width: auto; float: left; color:blue ">@ContentDateTime</div>
     <div class="listelement ml-3 defpadding" style="width: 75%; float: left;">@ContentLogOutput</div>
     <div name="contentlogtype" class="listelement ml-2 defpadding mr-2" style="width:auto; float: left; color:@ContentLogTypeColor">@ContentLogType</div>
