Refactorings - moving endless file stream to a project, also LogEntries moved to a project. EndlessFileStream now used by default in Service. Rename FileList - Watcher File List

--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -17,7 +17,7 @@
 </div>
 
 @using EasyLogService.Commands;
-@using EasyLogService.Services.CentralLogService;
+@using LogEntries;
 @using Microsoft.Extensions.Configuration;
 @inject ISearchCommand  _searchCommand;
 @inject IConfiguration  _configuration;
