Added date time fields in search, added keystroke delay, added max elements field - but limited to max = 2000 elements

--- a/src/EasyLog/EasyLogService/Components/List.razor
+++ b/src/EasyLog/EasyLogService/Components/List.razor
@@ -12,7 +12,7 @@
 
 
 @code {
-    private int _count = 10;
+    //private int _count = 10;
     public List<Components.ListElement> _list = new List<Components.ListElement>(100);
 
     public void Set(List<ListElement> newList, Refresh refresh)
