--- a/src/EasyLog/EasyLogService/_Imports.razor
+++ b/src/EasyLog/EasyLogService/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.JSInterop
 @using EasyLogService
 @using EasyLogService.Controllers
+@using EasyLogService.Components;
 @using EasyLogService.Shared
 
 
