--- a/src/EasyLog/EasyLogService/Components/SearchFieldDateTime.razor
+++ b/src/EasyLog/EasyLogService/Components/SearchFieldDateTime.razor
@@ -1,5 +1,7 @@
 ﻿<div class="input-group-prepend search-margin" style="align-items:center;">
-    <input type="checkbox" aria-label="Date from" @bind-value="_enabledDate" class="form-check" style="transform: scale(2.9);" />
+    <div class="d-flex justify-content-center align-items-center m-2">
+         <input type="checkbox" aria-label="Date from" @bind-value="_enabledDate" class="form-check" style="transform: scale(1.6);" />
+    </div>
     <span class="input-group-text" style="padding-left: 1.0rem;">@Name</span>
     <input type="date" aria-label="Search date" style="@(_style)" @bind-value="_internalDate" disabled="@(!EnabledDate)" @onchange="NewInput" @bind-value:event="oninput" class="form-control" />
     <input type="time" aria-label="Search time" style="@(_style)" @bind-value="_internalTime" disabled="@(!EnabledDate)" @onchange="NewInput" @bind-value:event="oninput" class="form-control" />
