--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -8,8 +8,7 @@
         <div class="m-3">
             <EasyLogService.Components.SearchField @ref="SearchField" />
         </div>
-        <div class="m-3 defpadding  ">Entries: @numEntries</div>
-
+        <div class="m-3 defpadding  ">Found: @numEntries</div>
         <div class="m-3 border bg-light" name="MainList" style="position:absolute; width:auto; right:0; left:0; height:auto; top:180px; bottom:0; overflow:auto; box-sizing:border-box">
             <EasyLogService.Components.List @ref="_mainList" />
         </div>
@@ -21,6 +20,7 @@
 @using EasyLogService.Commands;
 @using LogEntries;
 @using Microsoft.Extensions.Configuration;
+@using System.Threading;
 @inject ISearchCommand  _searchCommand;
 
 
@@ -32,7 +32,7 @@
 
 
 
-    Components.SearchField searchField;
+    Components.SearchField _searchField;
 
     protected override void OnInitialized()
     {
@@ -42,12 +42,12 @@
     {
         get
         {
-            return searchField;
+            return _searchField;
         }
 
         set
         {
-            searchField = value;
+            _searchField = value;
             InitSearchField();
         }
     }
@@ -70,11 +70,32 @@
 
     }
 
+    void EnableSpinner()
+    {
+        Interlocked.Increment(ref _spinnerCounter);
+        _searchField.DisplaySpinningSearch(true);
+    }
+
+    void DisableSpinner()
+    {
+        var spinnerCount = Interlocked.Decrement(ref _spinnerCounter);
+        if (spinnerCount <= 0)
+        {
+            if (spinnerCount < 0)
+                _spinnerCounter = 0; // Should not happen - but to play it safe if something going wrong the recover from that
+            _searchField.DisplaySpinningSearch(false);
+        }
+    }
+
+
+    int _spinnerCounter = 0;
+
     void InitSearchField()
     {
-        searchField.OnSearchQueryChange = (query, max, from, to) =>
+        _searchField.OnSearchQueryChange = (query, max, from, to) =>
         {
-            Send(query, max, from, to, (query) => Completed(query));
+            EnableSpinner();
+            Send(query, max, from, to, (result) => { DisableSpinner(); Completed(result); });
         };
     }
 
