--- a/src/EasyLog/EasyLogService/Pages/Main.cshtml
+++ b/src/EasyLog/EasyLogService/Pages/Main.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body style="height: 100%; overflow: hidden">
     <app>
-        <component type="typeof(App)" render-mode="ServerPrerendered" />
+        <component type="typeof(EasyLogService.App)" render-mode="ServerPrerendered" />
     </app>
 
     <div id="blazor-error-ui">
