--- a/src/EasyLog/EasyLogService/Shared/MainLayout.razor
+++ b/src/EasyLog/EasyLogService/Shared/MainLayout.razor
@@ -3,7 +3,9 @@
 
 
 <div class="main">
-    <div class="mt-3 ml-3 mr-3 mb-4 border rounded shadow bg-primary" name="mainHeader" style=""><h1 style="text-align: center">Easy Log</h1></div>
+    <div class="mt-3 ml-3 mr-3 mb-4 border rounded shadow bg-primary" name="mainHeader" style="">
+        <h1 style="text-align: center">Easy Log 0.0.9</h1>
+    </div>
     <div class="" style="">
         <div class="m-3">
             <EasyLogService.Components.SearchField @ref="SearchField" />
